# file-encryption

./: CMakeLists.txt  README.md  run.sh
src/: fileEncrypter.cpp  fileReader.cpp
test/: test_FileEncrypter.cpp
